change date field

--- a/templates/views/create.hbs
+++ b/templates/views/create.hbs
@@ -21,8 +21,8 @@
                 <label for="psw"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password" name="psw" id="newpass" required>
 
-                <label for="age"><b>Age</b></label>
-                <input type="password" placeholder="Enter Age" name="age" id="newage">
+                <label for="birthday"><b>Date of birth</b> <small>(optional)</ssmall></label>
+                <input type="date" placeholder="Enter Date of Birth" name="birthday" id="newdate">
 
                 <br>
 
