Updated error messages and labels

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <p>This site was created by Oddmund Huseby. It uses data from mapbox.com and darksky.net</p>
+            <p>This website and API was created by Oddmund Huseby. </p>
             <img class="portrait" src="./img/robot.jfif">
         </div>
         {{>footer}}
