--- a/templates/views/create.hbs
+++ b/templates/views/create.hbs
@@ -12,17 +12,17 @@
 
             <form id="create-user" class="loginForm">
 
-                <label for="name"><b>Full name</b></label>
+                <label for="name"><b>Full name</b> <small>(required)</small></label>
                 <input type="text" placeholder="Enter Full Name" name="name" id="newname" required>
 
-                <label for="mail"><b>E-mail</b></label>
+                <label for="mail"><b>E-mail</b> <small>(required)</small></label>
                 <input type="text" placeholder="Enter E-mail" name="mail" id="newmail" required>
 
-                <label for="psw"><b>Password</b></label>
+                <label for="psw"><b>Password</b> <small>(minimum 8 characters)</small></label>
                 <input type="password" placeholder="Enter Password" name="psw" id="newpass" required>
 
                 <label for="birthday"><b>Date of birth</b> <small>(optional)</ssmall></label>
-                <input type="date" placeholder="Enter Date of Birth" name="birthday" id="newdate">
+                <input type="date" placeholder="Enter Date of Birth" name="birthday" id="newdate" style="width: 95%; padding: 10px; margin-top: 10px; margin-bottom: 10px">
 
                 <br>
 
