--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,11 +9,11 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <p> Do you need more control in your life? Then you have come to the right place! Create an user and get full overview of your planned todos</p>
+            <p>Create your own digital recipe book with searchable ingredients. Sign up now!</p>
 
             <form id="login-user" class="loginForm">
-                <label for="uname"><b>Username</b></label>
-                <input type="text" placeholder="Enter Username" name="uname" id="username" required>
+                <label for="uname"><b>E-mail</b></label>
+                <input type="text" placeholder="Enter E-mail" name="uname" id="username" required>
 
                 <label for="psw"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password" name="psw" id="password" required>
