Updated error messages and pages users can view

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,6 +40,16 @@ body {
     vertical-align: middle
 }
 
+.center {
+    left: 0;
+    line-height: 200px;
+    margin-top: -100px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 100%;
+}
+
 footer {
     color: #888888;
     border-top: 1px solid #eeeeee;
