--- a/templates/views/create.hbs
+++ b/templates/views/create.hbs
@@ -8,7 +8,7 @@
 
     <body>
         <div class="main-content">
-            {{>header}}
+            {{>headerAuth}}
 
             <form id="create-user" class="loginForm">
 
