--- a/templates/views/createrecipe.hbs
+++ b/templates/views/createrecipe.hbs
@@ -8,7 +8,7 @@
 
     <body>
         <div class="main-content">
-            {{>header}}
+            {{>headerAuth}}
 
                 <input type="text" placeholder="Title" name="title" id="newtitle">
 
