--- a/templates/views/user.hbs
+++ b/templates/views/user.hbs
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="main-contetn">
-            {{>header}}
+            {{>headerAuth}}
             <h3>Profile</h3>
             <p id="profile"></p>
         </div>
