--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -158,3 +158,18 @@ label {
 textarea {
     margin: 10px
 }
+
+hr {overflow: visible; /* For IE */
+    height: 30px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px 0 0 0;
+    border-radius: 20px;
+}
+
+.ingredients {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
