Better readability and sessionStorage

--- a/templates/views/authIndex.hbs
+++ b/templates/views/authIndex.hbs
@@ -9,7 +9,7 @@
     <body>
         <div class="main-content">
             {{>headerAuth}}
-            <p>Create your own digital recipe book with searchable ingredients. Go to recipes to get started!</p>
+            <p>Create your own digital recipe book with searchable ingredients. Click on "Recipes" to get started!</p>
             
             <div class="center">
                 <p>You are logged in!</p>
